# CAVeTalk

./: CMakeLists.txt  Config-c.cmake.in  Config-common.cmake.in  Config-cpp.cmake.in  README.md
docs/: Add_Messages.md
examples/example-c/: CMakeLists.txt  example-c.c  example-c.h
examples/example-cpp/: CMakeLists.txt  example-cpp.cpp  example-cpp.h
lib/c++/inc/: cave_talk.h
lib/c++/src/: cave_talk.cc
lib/c/inc/: cave_talk.h
lib/c/src/: cave_talk.c
lib/common/inc/: cave_talk_link.h  cave_talk_types.h
lib/common/src/: cave_talk_link.c
messages/: air_quality.proto  arm.proto  config.proto  config_encoder.proto  config_log.proto  config_motor.proto  config_pid.proto  config_servo.proto  ids.proto  odometry.proto  reset.proto
tests/c/: cave_talk_tests.cc
tests/c++/: cave_talk_tests.cc
tests/common/: common_tests.cc
tools/export/: export_files.sh
